# RuleSwaps-old

./: .gitignore  halisp.cabal
src/: Actor.hs  Base.hs  BinaryUtils.hs  Card.hs  Deck.hs  Delta.hs  Frame.hs  Game.hs  Key.hs  Main.hs  Markup.hs  Prim.hs  Rand.hs  Reactive.hs  Record.hs  Signal.hs  Stride.hs  UI.hs
src/Actor/: IO.hs  Internal.hs  Proto.hs
src/Markup/: Attr.hs  Builder.hs
src/Reactive/: IO.hs
src/Stride/: Map.hs
src/Terminal/: Base.hs  Block.hs  Context.hs  Draw.hs  Figure.hs  Flow.hs  Input.hs  Metrics.hs  Page.hs  Paint.hs  UI.hs  Widget.hs
src/Terminal/Figure/: Block.hs  Core.hs  Flow.hs
testsuite/Tests/: Main.hs  Signal.hs
