name:                rule-swaps
version:             0.1.0.0
author:              Dmitry Zamkov
build-type:          Simple
cabal-version:       >=1.8
executable rule-swaps
  hs-source-dirs: src
  main-is:		  Main.hs
  build-depends:  base,
                  mtl,
                  transformers,
                  containers,
                  binary,
                  cryptohash,
                  bytestring,
                  entropy,
                  text,
                  ansi-terminal,
                  terminal-size
  if os(windows)
    extra-libraries:  msvcrt
test-suite test
  hs-source-dirs: testsuite src
  type:           exitcode-stdio-1.0
  main-is:        Tests/Main.hs
  build-depends:  base,
                  mtl,
                  containers,
                  HUnit
