name:                rule-swaps
version:             0.1.0.0
author:              Dmitry Zamkov
build-type:          Simple
cabal-version:       >=1.8
executable rule-swaps
  hs-source-dirs: src
  main-is:		  Main.hs
  ghc-options:    -threaded
  build-depends:  base,
                  mtl,
                  transformers,
                  operational,
                  containers,
                  vector,
                  void,
                  binary,
                  cryptohash,
                  bytestring,
                  entropy,
                  text,
                  ansi-terminal,
                  terminal-size
  if os(windows)
    extra-libraries:  msvcrt
