name:                rule-swaps
version:             0.1.0.0
author:              Dmitry Zamkov
build-type:          Simple
cabal-version:       >=1.8
executable rule-swaps
  hs-source-dirs: src
  main-is:		  Main.hs
  ghc-options:    -threaded
                  -Wall
                  -fno-warn-unused-do-bind
                  -fno-warn-name-shadowing
  build-depends:  base,
                  mtl,
                  transformers,
                  operational,
                  containers,
                  vector,
                  void,
                  binary,
                  cryptohash,
                  bytestring,
                  entropy,
                  text,
                  ansi-terminal,
                  terminal-size,
                  reactive-banana
  if os(windows)
    extra-libraries:  msvcrt
